--- a/docs/gcheck.Rmd
+++ b/docs/gcheck.Rmd
@@ -1,8 +1,16 @@
 ---
-title: "Using the gcheck shiny app"
+title: "The gcheck app"
 author: "Garth Tarr"
 date: "25 September 2016"
-output: html_document
+output:
+  pdf_document:
+    toc: yes
+    toc_depth: '3'
+  html_document:
+    theme: flatly
+    toc: yes
+    toc_depth: 3
+    toc_float: yes
 ---
 
 ```{r setup, include=FALSE}
@@ -11,20 +19,56 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Installing the app
 
-The gcheck program is a shiny app running on top of R.  You can access it via the internet at [garthtarr.shinyapps.io/gcheck](https://garthtarr.shinyapps.io/gcheck/), however this involves uploading the potentially very large data file over the internet which can sometimes take time and the computer in the cloud isn't necessarily super fast, then it creates images which are downloaded back to your browser.  For large data and complex images, the process can be a bit slow.
+The **gcheck** program is a shiny app running on top of R.  You can access it via the internet at [garthtarr.shinyapps.io/gcheck](https://garthtarr.shinyapps.io/gcheck/), however this involves uploading the potentially very large data file over the internet which can sometimes take time and the computer in the cloud isn't necessarily super fast, then it creates images which are downloaded back to your browser.  For large data and complex images, the process can be a bit slow.
 
-To run the app locally on your computer, you need:
+To run the **gcheck** app locally on your computer, you need:
 
 1. The latest version of R [https://cran.r-project.org/](cran.r-project.org).
 2. The latest version of RStudio [rstudio.com/products/rstudio/download](https://www.rstudio.com/products/rstudio/download/)
-3. The app source code
+3. The latest version of the **gcheck** app source code from [here](https://github.com/garthtarr/gcheck/archive/master.zip)
+4. Unzip the `gcheck-master.zip` file
+5. Open the `gcheck.Rproj` file.  This is an RStudio project file which should open RStudio and set the working directory to the same folder.
+6. Make sure you have the necessary packages installed.  The first time doing this on a new computer (or if you update R and need to reinstall them), use:
 
+```r
+install.packages("readr")
+install.packages("shiny")
+install.packages("ggplot2")
+install.packages("grid")
+install.packages("tools")
+install.packages("reshape2")
+install.packages("gridExtra")
+install.packages("magrittr")
+install.packages("markdown")
+```
 
+6. Check that you've got the latest version of all the installed R packages.  In RStudio you can do this by going to the `Tools` dropdown menu and selecting `Check for package updates...`
+7. In the **Console** window type:
+```r
+shiny::runApp()
+```
+   and press **Enter**.  Alternatively, if you have the `app.R` file open, you there will be `Run App` button in the top right of the source code window.  
+   ![](www/screenshot.png)
 
+8. This will load the **gcheck** app in a browser window.  While the app is running in the browser RStudio has to stay open.  If you close RStudio, the browser window will go grey and say it lost the connection. 
 
-## Getting started
+#### Troubleshooting:
 
-This app accepts either a csv file or a zipped csv file.  Zipping the file before uploading helps reduce the file size (e.g. a 13MB csv file becomes a 2MB zip file) which means it takes considerably less time for the file to be uploaded to the server.
+Sometimes RStudio will open the app in it's own browser (rather than the operating system default (e.g. Google Chrome).  For best results the app should run in an external browser window.  You can force this behaviour from the dropdown arrow next to the `Run App` button (select `Run External`) or using
+
+```r
+shiny::runApp(launch.browser=TRUE)
+```
+
+[Google Chrome](https://www.google.com.au/chrome/browser/desktop/) is the best browser to run the app in, which may mean you may need to set it as the default browser on your computer.  Do do this, open Google Chrome, then type `chrome://settings/` in the url bar, scroll down to the section **Default browser**.
+
+If you have issues with specific files, zip them up and send them to Garth Tarr (garth.tarr@gmail.com) with a brief description of the issue and how to replicate it.  He'll then push an update through the system to both the shinyapps server and a new version of the **gcheck** app source code to download and use on your local machine. 
+
+Don't save any files in the `gcheck-master` folder (the one created when you unzipped `gcheck-master.zip`).  When you download a new version of the **gcheck** app, you can just delete the old folder.
+
+## Running the gcheck app
+
+The **gcheck** app accepts either a csv file or a zipped csv file.  Zipping the file before uploading helps reduce the file size (e.g. a 13MB csv file becomes a 2MB zip file) which means it takes considerably less time for the file to be uploaded to the server.
 
 The file should have the following columns (not case sensitive):
 
@@ -40,7 +84,7 @@ The file should have the following columns (not case sensitive):
 `Ph`
 `FeedType`
 
-Other columns can be in the data file, but they will be ignored.
+Other columns can be in the data file, but they are currently ignored.
 
 ### Subsetting the data
 
@@ -58,7 +102,7 @@ The app fits models for each of the traits of interest, graders are then assesse
 
 Below the **Predictive ability** summary table is the raw output for each model so you can see what variables went into each model and their relative importance.
 
-## Grader assessment
+### Grader assessment
 
 The **Grader assessment** tab shows the average residual, standard deviation of the residuals and effect size broken down by grader for each measured trait.  This tab provides averages over time (though time is taken into account in the modelling procedure).
 
@@ -66,11 +110,11 @@ While the average residual is perhaps easy to understand (as the mean difference
 
 Below the tables are violin plots showing the distribution of the original data and the residuals for each trait broken down by grader.  This also helps highlight differences in the shape and structure of the assessments of individual graders.  For example some graders have very lumpy hump height distributions.  Other graders give a very limited range of scores for some traits relative to other graders.
 
-## Monthly plots
+### Monthly plots
 
 The **Monthly plots** tab shows how the average residual (or effect size) changes over time.  The size of the dot is indicative of the number of carcases graded in a given month.  Very small dots should be treated with caution, there's probably not enough data to make an informed assessment of their performance.  The lines between points only serve to link the dots together to make it easier to see if a grader is consistently returning negative residuals or positive residuals over time (each grader is allocated a unique colour as shown in the legend on the right).  
 
-## Monthly summary
+### Monthly summary
 
 The **Monthly summary** tab gives the same information as the **Monthly plots** tab, in table form rather than as a plot.  It breaks down the average residual, residual standard deviation and effect sizes by grader and month.  You need to choose the grader of interest from the drop down menu on the left.
 
