--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -30,18 +30,19 @@ To run the **gcheck** app locally on your computer, you need:
 3. The latest version of the **gcheck** app source code from [here](https://github.com/garthtarr/gcheck/archive/master.zip)
 4. Unzip the `gcheck-master.zip` file
 5. Open the `gcheck.Rproj` file.  This is an RStudio project file which should open RStudio and set the working directory to the same folder.
-6. Make sure you have the necessary packages installed.  The first time doing this on a new computer (or if you update R and need to reinstall them), use:
+6. Make sure you have the necessary packages installed.  The first time doing this on a new computer (or if you update R and need to reinstall them), copy and paste the following code into the Console window then press Enter.
 ```r
 install.packages("readr")
 install.packages("shiny")
 install.packages("ggplot2")
-install.packages("grid")
-install.packages("tools")
 install.packages("reshape2")
 install.packages("gridExtra")
 install.packages("magrittr")
 install.packages("markdown")
 ```
+   The images below show what RStudio will look like before and after step 6.
+   ![](img/screenshot1.png) <br><br>
+   ![](img/screenshot2.png)
 7. Check that you've got the latest version of all the installed R packages.  In RStudio you can do this by going to the `Tools` dropdown menu and selecting `Check for package updates...`
 8. In the **Console** window type:
 ```r
